force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
  <label>Error Log</label>
  <pluralLabel>Error Logs</pluralLabel>
  <nameField>
    <displayFormat>E-{YYYYMMDD}-{00000}</displayFormat>
    <label>Error Log</label>
    <type>AutoNumber</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>