force-app/main/default/objects/Error_Log__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Class Name or Flow API Name.  e.g. Apex: class name, Flow: flow API name</description>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>