force-app/main/default/objects/Error_Log__c/fields/Context__c.field-meta.xml
<CustomField>
  <fullName>Context__c</fullName>
  <label>Context</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>