force-app/main/default/objects/Error_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
  <fullName>Correlation_Id__c</fullName>
  <label>Correlation Id</label>
  <type>LongTextArea</type>
  <length>32768</length>
  <description>Unique identifier to correlate related error logs across systems or processes. e.g. Envelope_Id__c or Flow.InterviewGuid</description>
</CustomField>