force-app/main/default/objects/Error_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
  <fullName>Exception_Type__c</fullName>
  <label>Exception Type</label>
  <type>Text</type>
  <length>255</length>
  <description>Type of exception thrown. e.g. System.CalloutException, NullPointerException, DmlException</description>
</CustomField>