force-app/main/default/objects/Error_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
  <fullName>Operation__c</fullName>
  <label>Operation</label>
  <type>Text</type>
  <length>255</length>
  <description>Method or Logical Operation. e.g. Apex: method name, Flow: element API name</description>
</CustomField>