force-app/main/default/objects/Error_Log__c/fields/Parent_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Name__c</fullName>
    <label>Triggering Record Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>