force-app/main/default/objects/Error_Log__c/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <label>Triggering Record Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>