force-app/main/default/objects/Error_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
  <fullName>Payload__c</fullName>
  <label>Payload (JSON)</label>
  <type>LongTextArea</type>
  <length>131072</length>
</CustomField>