force-app/main/default/objects/Error_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
  <fullName>Severity__c</fullName>
  <label>Severity</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>DEBUG</fullName><default>false</default></value>
      <value><fullName>INFO</fullName><default>false</default></value>
      <value><fullName>WARN</fullName><default>false</default></value>
      <value><fullName>ERROR</fullName><default>true</default></value>
      <value><fullName>FATAL</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>