force-app/main/default/objects/Error_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of the error. e.g. APEX, FLOW, TRIGGER, etc.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>FLOW</fullName>
            </value>
            <value>
                <fullName>TRIGGER</fullName>
            </value>
            <value>
                <fullName>BATCH</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <default>true</default>
                <label>OTHER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>