force-app/main/default/objects/Error_Log__c/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <description>Stack trace of the error for debugging purposes. e.g. ex.getStackTraceString() truncated by fit() helper.</description>
    <label>Stacktrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>